# webos

./: .editorconfig  .gitignore  .next.pid  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  MEMORY.md  Makefile  README.md  SECURITY.md  STYLE-GUIDE.md  babel.config.json  daemon.sh  deployment_report.md  eslint-rules.config.js  eslint.config.js  global.d.ts  package.json  start-server.sh  tsconfig.json  vitest.config.ts  webpack.config.js  worklog.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  webpack.yml
.zscripts/: daemon.sh
apps/: registry.tsx
apps/com.os.browser/: index.ts  package.json
apps/com.os.clock/: package.json
apps/com.os.filemanager/: package.json
apps/com.os.terminal/: appinfo.json  package.json
crates/userland/: build.sh
docs/: PROJECT-STRUCTURE.md  README.md  REFACTOR-PLAN.md  THIRD-PARTY-APPS.md  UI-FRAMEWORK.md  developer-plugin.md  kernel-architecture.md  syscall.md
drivers/: package.json
drivers/src/: controller.ts  host.ts  index.ts
i18n/: package.json
i18n/locales/: zh-TW.json
i18n/src/: index.ts
kernel/: build.sh  package.json
kernel/bridge/: index.ts
kernel/src/: bridge.rs  ipc.rs  memory.rs
oobe/: locales.ts
public/: sw.js  version.json
public/wasm/: cat.wasm  init.wasm  kernel.wasm  ls.wasm  shell.wasm
recovery/: package.json
recovery/src/: index.tsx
site/: next.config.js  package.json  tsconfig.json
site/public/: sw.js  wallpapers  wasm
src/: index.html  index.tsx
ui/: package.json
userland/lib/: Cargo.toml
userland/shell/: Cargo.toml
(+91 files in other folders)
