[workspace]
resolver = "2"
members = [
    "kernel",
    "userland/init",
    "userland/shell",
    "userland/ls",
    "userland/cat",
    "userland/lib",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.profile.release]
opt-level = "z"
lto = true
panic = "abort"
