[package]
name = "webos-shell"
version = "0.1.0"
edition = "2021"
description = "WebOS Shell - Rust userland program"

[lib]
crate-type = ["cdylib"]

[dependencies]
webos-userland = { path = "../lib" }

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true

[profile.dev]
panic = "abort"
